@@ -2,4 +2,3 @@
 *The NVDA exit dialog still does not always gain focus.
 *NVDA is not able to run as a service (even with the help of cygwin or another service loader).
 
-
